--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "parcel": "^2.0.0-beta.2"
+    "parcel": "1.12.3",
+    "sass": "^1.32.11"
+  },
+  "dependencies": {
+    "normalize": "^0.3.1",
+    "normalize-scss": "^7.0.1"
   }
 }
